--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,55 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100;1,200;1,600&display=swap');
+
 header {
-    background: #6cd8ff;
-    padding: 15px 0;
+    background: rgb(0, 51, 171);
+    padding: 15px 0  15px 15px;
     width: 100%;
 }
-.logo {
-    width: 150px;
-
+.info{
+    display: flex;
+    padding-left: 70%;
+    align-items: center;
+}
+.info a{
+    color: white;
+}
+.fa-brands{
+    padding: 8px;
+}
+.logo{
+    display: flex;
+    height: 90px;
+    padding-bottom: 9px;
+}
+.text{
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+}
+.text i{
+    color: green;
+}
+.text a{
+    text-decoration: none;
+    color: white;
+    margin-top: 11px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 body {
-    background-color: lightgrey;
+    background-color: white;
 }
 
 #cuam_slider {
     font-family: sans-serif;
     margin: auto;
-    background-color: white;
+    background-color: lightgray;
     max-width: 800px;
     width: 100%;
     padding: 30px;
     box-sizing: border-box;
+    margin-top: 2%;
 }
 
 ul,li {
@@ -84,7 +115,7 @@ ul.slider li:target {
     display: inline-block;
     color: white;
     text-decoration: none;
-    background-color: grey;
+    background-color: gray;
     padding: 10px;
     width: 20px;
     height: 20px;
