--- a/css/styles_doc.css
+++ b/css/styles_doc.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100;1,200;1,600&display=swap');
+
 *{
     padding: 0;
     margin: 0;
