--- a/css/styles_doc.css
+++ b/css/styles_doc.css
@@ -4,6 +4,14 @@
     padding: 0;
     margin: 0;
 }
+#container{
+    max-width: 500px;
+    text-align: center;
+    margin: 10% 30%;
+    background-color: lightgray;
+    padding: 20px;
+    border-radius: 7%
+}
 body{
     background: rgb(235, 234, 234);
     margin-left: 1.5%;
